# fillword

./: README.md
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  App.tsx  index.css
client/src/components/: LevelList.jsx  LevelList.tsx  Upload.jsx  Upload.tsx
client/src/utils/: api.js
server/: .gitignore  index.py  pyproject.toml
server/app/: crud.py  database.py  main.py  models.py  schemas.py
server/app/helpers/: math.py
server/app/services/: finding_words.py  process_level_file.py
server/migrations/versions/: 9f0fdb960de9_added_initial_table.py
