[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Andrew Kozlov <fromlightbeam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
